post character and reload map

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "canvas": "^2.3.1",
     "express": "^4.16.4",
     "tilestrata": "^2.1.2"
